Sculpting make multires link bug #44611

Closed
opened 2015-05-05 18:28:37 +02:00 by Yegor · 6 comments

System Information
CentOS, Debian, Nvidia Titian, Nvidia GTX 780

Blender Version
Broken: 2.74 official

Short description of error
When you make a link from a sculpted object with higher multires subdiv level onto a non-sculpted object with lower multires subdiv level, the last object's polygons get blown away.

Exact steps for others to reproduce the error
Cube_01 has sculpting and third level of sculpt subdiv.
Cube_02 has no sculpting and second level of sculpt subdiv.
Cube_03 has the final phase of this bug.

You just make a link of modifiers from Cube_01 to Cube_02 or vice versa. I don't know which direction is right to describe.
The goal is to make Cube_02 having the same sculpt levels as Cube_01 has, despite of the sculpting occurred.
Anyways, the distortion of the mesh must not happen.
sculpting_link_multires_bug.blend

**System Information** CentOS, Debian, Nvidia Titian, Nvidia GTX 780 **Blender Version** Broken: 2.74 official **Short description of error** When you make a link from a sculpted object with higher multires subdiv level onto a non-sculpted object with lower multires subdiv level, the last object's polygons get blown away. **Exact steps for others to reproduce the error** Cube_01 has sculpting and third level of sculpt subdiv. Cube_02 has no sculpting and second level of sculpt subdiv. Cube_03 has the final phase of this bug. You just make a link of modifiers from Cube_01 to Cube_02 or vice versa. I don't know which direction is right to describe. The goal is to make Cube_02 having the same sculpt levels as Cube_01 has, despite of the sculpting occurred. Anyways, the distortion of the mesh must not happen. [sculpting_link_multires_bug.blend](https://archive.blender.org/developer/F170592/sculpting_link_multires_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Bastien Montagne self-assigned this 2015-05-07 14:11:53 +02:00

This is not implemented ('make link' for multires modifier), will actually lead to crash very easily (on debug build with asan e.g.).

Will see if we can fix this easily, otherwise will just prevent that type of modifier to be 'copied' here (like e.g. hook one).

This is not implemented ('make link' for multires modifier), will actually lead to crash very easily (on debug build with asan e.g.). Will see if we can fix this easily, otherwise will just prevent that type of modifier to be 'copied' here (like e.g. hook one).

This issue was referenced by aa3fc89257

This issue was referenced by aa3fc89257f839260e7577881f399011a709badf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit aa3fc89257.

Closed by commit aa3fc89257.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44611
No description provided.